--- a/header.html.erb
+++ b/header.html.erb
@@ -1,21 +1,43 @@
-<h1>escambo</h1>
+<div class="<%= user ? 'logged' : 'not-logged' %>">
+  <h1>escambo</h1>
 
-<div id='header-space'>
-</div>
+  <%= javascript_include_tag '/designs/themes/escambo/escambo.js' %>
 
-<div id='header-links'>
-<%= link_to _('home'), '/' %>
-<%= link_to _('culture points'), :controller => :search, :action => :enterprises %>
-<%= link_to _('offers, interests and knowledges'), :controller => :search, :action => :enterprises %>
-<%= link_to _('how it works'), :controller => :search, :action => :enterprises %>
-</div>
+  <div id='header-links'>
+    <%= link_to _('home'), '/' %>
+    <%= link_to _('culture points'), :controller => :search, :action => :enterprises %>
+    <%= link_to _('offers, interests and knowledges'), :controller => :search, :action => :enterprises %>
+    <%= link_to _('how it works'), :controller => :search, :action => :enterprises %>
+  </div>
 
-<div id="user">
-  <span class='logged-in' style='display: none;'>
-    <%= usermenu_logged_in %>
-  </span>
-  <span class='not-logged-in' style='display: none'>
-    <%= link_to _('sign up'), :controller => 'account', :action => 'signup' %>
-    <%= thickbox_inline_popup_link _('login'), login_url, 'inlineLoginBox' %>
-  </span>
+  <div id="user">
+    <span class='logged-in' style='display: none;'>
+      <% if user %>
+        <span class="user-logged-left">
+          <a href="<%= url_for :controller => :profile_editor, :profile => user.identifier, :action => :edit %>">
+            <%= profile_image user, :portrait, :class => 'profile-image' %>
+          </a>
+        </span>
+        <span class="user-logged-right">
+          <div>
+            <%= link_to user.name, :controller => :profile_editor, :profile => user.identifier, :action => :edit %>
+          </div>
+          <div>
+            <%= select "enterprise", "selected", user.memberships.collect{ |p| [ p.name, p.id ] }, {:include_blank => _('None')} %>
+          </div>
+          <div>
+            <%= link_to _('Log out'), :controller => :account, :action => :logout %>
+          </div>
+        </span>
+      <% end %>
+    </span>
+    <span class='not-logged-in' style='display: none'>
+      <%= link_to _('sign up'), :controller => 'account', :action => 'signup' %>
+      <%= thickbox_inline_popup_link _('login'), login_url, 'inlineLoginBox', :id => 'link_login' %>
+    </span>
+
+    <div id='inlineLoginBox' style='display: none;'>
+      <%= render :file => 'account/login', :locals => { :is_thickbox => true } %>
+    </div>
+  </div>
 </div>
