Add active organization header

--- a/header.html.erb
+++ b/header.html.erb
@@ -41,7 +41,10 @@
     <div id='inlineLoginBox' style='display: none;'>
       <%= render :file => 'account/login', :locals => { :is_thickbox => true } %>
     </div>
-  </div>
 
-  <%= render :file => 'active_organization' %>
+    <div class="clean"></div>
+  </div>
+  <div class="clean"></div>
+
+  <div class="clean"></div>
 </div>
