--- a/layouts/escambo.html.erb
+++ b/layouts/escambo.html.erb
@@ -31,6 +31,9 @@
       <div id='theme-header'>
         <%= theme_header %>
       </div>
+
+      <%= render :file => 'active_organization' %>
+
       <div id="wrap-2">
         <h1 id="site-title">
           <%= theme_site_title %>
