Fix profile variable

--- a/active_organization.html.erb
+++ b/active_organization.html.erb
@@ -3,7 +3,7 @@
     <div id="active-organization-inner">
       <span id="organization-ident">
         <%= profile_image @active_organization, :portrait, :class => 'profile-image' %>
-        <h2><%= profile.name %></h2>
+        <h2><%= @active_organization.name %></h2>
       </span>
 
       <span id="organization-menu">
