--- a/style.scss
+++ b/style.scss
@@ -4,8 +4,26 @@
   clear: both;
 }
 
-$padding: 12px;
-$half-padding: 6px;
+$base: 12px;
+$module: 6*$base;
+$intercolumn: 2*$base;
+
+$module1: 1*$module + 1*$intercolumn;
+$module2: 2*$module + 1*$intercolumn;
+$module3: 3*$module + 2*$intercolumn;
+$module4: 4*$module + 3*$intercolumn;
+$module5: 5*$module + 4*$intercolumn;
+$module6: 6*$module + 5*$intercolumn;
+$module7: 7*$module + 6*$intercolumn;
+$module8: 8*$module + 7*$intercolumn;
+$module9: 9*$module + 8*$intercolumn;
+$module10: 10*$module + 9*$intercolumn;
+
+$padding: $intercolumn/2;
+$half-padding: $padding/2;
+$margin: $intercolumn;
+$half-margin: $margin/2;
+
 .padding {
   padding: $padding;
   display: inline-block;
@@ -64,6 +82,75 @@ p.menu_g_selecionado{
   font-size: 21pt;
 }
 
+/* Fix to 960px effective content */
+#wrap-1 {
+  position: relative;
+}
+
+#wrap-1,
+#footer-content,
+#theme-footer {
+  width: 1040px;
+  border-left: 24px solid transparent;
+  border-right: 24px solid transparent;
+}
+
+#wrap-1 {
+  background: transparent url(images/content-bg.png) center top repeat-y;
+}
+
+#wrap-2 {
+  padding: 24px;
+  padding-top: 0;
+  background: transparent;
+  border-color: transparent;
+  border: none;
+  border-top: 1px solid #D3D7CF;
+}
+
+.box-2,
+.box-3 {
+  width: 220px;
+}
+body.template-default .box-1 {
+  margin: 0 244px 0 244px;
+}
+body.template-2leftbars .box-1 {
+  margin: 0 0 0 488px;
+}
+body.template-rightbar .box-1 {
+  margin: 0 244px 0 0;
+}
+body.template-leftbar .box-1 {
+  margin: 0 0 0 244px;
+}
+
+#content .link-list-block li a.link-this-page {
+  max-width: none;
+}
+
+#profile-activity ul,
+#profile-network ul,
+#profile-wall ul {
+  width: 100%;
+}
+.ui-tabs .ui-tabs-panel {
+  padding: 0;
+}
+
+#main-content-wrapper-1,
+#main-content-wrapper-2,
+#main-content-wrapper-3,
+#main-content-wrapper-4,
+#main-content-wrapper-5,
+#main-content-wrapper-6,
+#main-content-wrapper-7,
+#main-content-wrapper-8 {
+  background: transparent;
+  padding: 0;
+}
+
+/* end */
 
 body {
   background: none;
@@ -194,7 +281,7 @@ body {
 
     #organization-ident {
       float: left;
-      margin-left: $padding;
+      margin-left: $half-margin;
 
       img {
         width: 46px;
@@ -226,5 +313,30 @@ body {
 }
 #wrap-2 {
   margin-top: 36px;
+}
+
+.snippet {
+  padding: $padding;
+
+  .first-column {
+    display: inline-block;
+    width: $module2;
+    margin-right: $margin;
+
+    .label {
+
+    }
+  }
+  .second-column {
+    display: inline-block;
+    width: $module6;
+    margin-right: $margin;
+  }
+  .third-column {
+    display: inline-block;
+    width: $module2;
+
+  }
+
 }
 
