--- a/active_organization.html.erb
+++ b/active_organization.html.erb
@@ -9,7 +9,7 @@
       <span id="organization-menu">
         <%= link_to _('profile'), @active_organization.url, :class => 'organization-button' %>
         <%= link_to _('members'), {:controller => :profile, :action => :members, :profile => @active_organization.identifier}, :class => 'organization-button' %>
-        <%= link_to _('exchanges'), '', :class => 'organization-button' %>
+        <%= link_to _('exchanges'), {:controller => :exchange_plugin_myprofile, :action => :index, :profile => @active_organization.identifier}, :class => 'organization-button'  %>
         <%= link_to _('network'), '', :class => 'organization-button' %>
         <%= link_to _('products'), {:controller => :catalog, :profile => @active_organization.identifier}, :class => 'organization-button' %>
         <%= link_to _('knowledges'), '', :class => 'organization-button' %>
