--- a/style.scss
+++ b/style.scss
@@ -94,6 +94,7 @@ body {
 p.menu_g_selecionado{
   font-family: 'RobotoBoldCondensed';
   font-size: 21pt;
+  line-height: 0px;
 }
 
 /* Fix to 960px effective content */
