--- a/style.css
+++ b/style.css
@@ -1,4 +1,22 @@
 @import url(../base/style.css);
+.clean {
+  clear: both; }
+
+.padding, .header-button, #user .not-logged-in a, #header-links a {
+  padding: 12px;
+  display: inline-block; }
+
+.half-padding, #active-organization, #active-organization #active-organization-inner #organization-menu .organization-button {
+  padding: 6px; }
+
+.no-v-padding {
+  padding-top: 0;
+  padding-bottom: 0; }
+
+.no-h-padding, #active-organization {
+  padding-left: 0;
+  padding-right: 0; }
+
 @font-face {
   font-family: 'RobotoCondensed';
   src: url("fonts/roboto-condensed-webfont.eot");
@@ -34,14 +52,73 @@ body {
 
 p.menu_g_selecionado {
   font-family: 'RobotoBoldCondensed';
-  font-size: 21pt; }
+  font-size: 21pt;
+  line-height: 0px; }
 
-.box-padding, .header-button, #user .not-logged-in a, #header-links a {
-  padding: 10px;
-  display: inline-block; }
+/* Fix to 960px effective content */
+#wrap-1 {
+  position: relative; }
 
+#wrap-1,
+#footer-content,
+#theme-footer {
+  width: 1040px;
+  border-left: 24px solid transparent;
+  border-right: 24px solid transparent; }
+
+#wrap-1 {
+  background: transparent url(images/content-bg.png) center top repeat-y; }
+
+#wrap-2 {
+  padding: 24px;
+  padding-top: 0;
+  background: transparent;
+  border-color: transparent;
+  border: none;
+  border-top: 1px solid #D3D7CF; }
+
+.box-2,
+.box-3 {
+  width: 220px; }
+
+body.template-default .box-1 {
+  margin: 0 244px 0 244px; }
+
+body.template-2leftbars .box-1 {
+  margin: 0 0 0 488px; }
+
+body.template-rightbar .box-1 {
+  margin: 0 244px 0 0; }
+
+body.template-leftbar .box-1 {
+  margin: 0 0 0 244px; }
+
+#content .link-list-block li a.link-this-page {
+  max-width: none; }
+
+#profile-activity ul,
+#profile-network ul,
+#profile-wall ul {
+  width: 100%; }
+
+.ui-tabs .ui-tabs-panel {
+  padding: 0; }
+
+#main-content-wrapper-1,
+#main-content-wrapper-2,
+#main-content-wrapper-3,
+#main-content-wrapper-4,
+#main-content-wrapper-5,
+#main-content-wrapper-6,
+#main-content-wrapper-7,
+#main-content-wrapper-8 {
+  background: transparent;
+  padding: 0; }
+
+/* end */
 body {
-  background: none; }
+  background: none;
+  overflow-x: hidden; }
 
 #top-search {
   display: none; }
@@ -62,6 +139,7 @@ body {
 .header-button, #user .not-logged-in a, #header-links a {
   background: #F6FCA6;
   margin: 0 2px;
+  margin-bottom: 12px;
   font-weight: bold;
   text-decoration: none;
   color: black; }
@@ -72,12 +150,6 @@ body {
 #theme-header {
   height: auto;
   position: relative; }
-
-#theme-header .logged {
-  height: 90px; }
-
-#theme-header .not-logged {
-  height: 160px; }
 
 #theme-header h1 {
   color: #E5F600;
@@ -103,7 +175,8 @@ body {
 
 #theme-header .logged h1 {
   font-size: 100px;
-  margin-top: 40px; }
+  margin-top: 40px;
+  margin-bottom: 40px; }
 #theme-header .logged #user .not-logged-in, #theme-header .logged #header-links {
   margin-top: 50px; }
 
@@ -114,7 +187,7 @@ body {
 
 #header-links {
   float: left;
-  margin-left: 20px; }
+  margin-left: 12px; }
 
 #user .not-logged-in {
   display: block; }
@@ -142,3 +215,50 @@ body {
 
 #content {
   margin-top: 0; }
+
+#active-organization {
+  background: #7857B8;
+  height: 24px;
+  width: 100%;
+  position: absolute;
+  left: 0; }
+  #active-organization #active-organization-inner {
+    width: 960px;
+    margin: auto; }
+    #active-organization #active-organization-inner #organization-ident {
+      float: left;
+      margin-left: 12px; }
+      #active-organization #active-organization-inner #organization-ident img {
+        width: 46px;
+        height: 46px;
+        margin-top: -6px;
+        position: absolute; }
+      #active-organization #active-organization-inner #organization-ident h2 {
+        margin-left: 58px;
+        color: white;
+        display: inline; }
+    #active-organization #active-organization-inner #organization-menu {
+      float: right; }
+      #active-organization #active-organization-inner #organization-menu .organization-button {
+        height: 12px;
+        display: inline-block;
+        font-size: 11px;
+        background: #FAF7DC;
+        text-decoration: none; }
+
+#wrap-2 {
+  margin-top: 36px; }
+
+.snippet {
+  padding: 12px; }
+  .snippet .first-column {
+    display: inline-block;
+    width: 168px;
+    margin-right: 24px; }
+  .snippet .second-column {
+    display: inline-block;
+    width: 552px;
+    margin-right: 24px; }
+  .snippet .third-column {
+    display: inline-block;
+    width: 168px; }
