Adding css class to profile_image_link

--- a/style.scss
+++ b/style.scss
@@ -369,6 +369,119 @@ body {
     width: $module2;
 
   }
+}
 
+li {
+  display: inline-block;
+}
+
+.escambo-plugin-profile-block{
+  width: $module2;
+  border: double 5px;
+
+  /*place here all background and border combinations */
+  /*begin*/
+  .inside-border-purple{
+     border-color:#7F0085;
+  }
+
+  .bg-purple{
+    background-color:#F3E1EF;
+  }
+  /*end*/
+
+  .content-profile-area{
+    max-width: $module2;    
+  
+    .categories-area{
+      @extend .area;
+      height: $base*6;
+      max-height: $base*6;
+      font-size: 15px;
+    }
+
+    .enterprise-area{
+      @extend .area;
+      height: $base*9;
+      max-height: $base*9;
+    }
+
+    .location-area{
+      @extend .area;
+      height: $base*6;
+      max-height: $base*6;
+      font-size: 15px;
+    }
+
+    .sumary-area{
+      @extend .area;
+      height: $base*4;
+      max-height: $base*4;      
+      font-size: 10px;
+    }
+
+    .area{
+      width: $module2 - ($base*2);
+      max-width: $module2 - ($base*2);
+      position: relative;
+      left: $base;
+    }
+
+    .dotted-border-bottom {
+      border-bottom: 1px dotted #000000;
+    }
+  }
+
+  .image-profile-area{
+    max-width: $module2;
+    max-height: $base*15;
+
+    .escambo-plugin-exchange-icons{
+      width: $base*4;
+      height: $base*2;
+      position: relative;
+      left: $module2 -($base*4);
+
+      .icon{
+        width:$base*1.5;
+        max-width: $base*1.5;
+        height:$base*1.5;
+        max-height: $base*1.5;
+      }
+
+      .has-exchanged{
+        @extend .icon;
+        background: url(images/shareable.png);
+      }
+
+      .hasnot-exchanged{}
+
+      .is-bookmarked{}
+
+      .isnot-bookmarked{
+        background: url(images/heart-empty.png);
+      }
+    }
+
+    .profile-image{      
+      width: $module2;
+      height: $base*14;
+      position: relative;
+      top: -($base*2)
+    }   
+  }
+}
+
+.escambo-plugin-exchange-button{
+  float: left;
+  color: white;
+  background: #394E41;
+  border: 0px;
+  border-radius: 5px;
+  font-family: 'RobotoBoldCondensed';
+  padding: 3px;
+  position: relative;    
+  left: $base/2;
+  top: -($base);
 }
 
