--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,3 @@
-@import url(../base/style.css);
-
 .clean {
   clear: both;
 }
@@ -189,6 +187,8 @@ $half-margin: $margin/2;
   font-size: 10pt;
 }
 
+/* Overwrite and general styles */
+
 body {
   @extend .pstyle-none;
 }
@@ -201,30 +201,47 @@ body {
   text-align: left;
   border: 0px;
 }
+#content h2 {
+  @extend .pstyle-h2;
+  text-transform: uppercase;
+  color: $c-exchange;
+  margin-left:25px;
+}
+#content h3 {
+  @extend .pstyle-h3;
+}
+#content h4 {
+  @extend .pstyle-h4;
+  text-transform: uppercase;
+  color: $c-exchange;
+  margin-left:25px;
+}
+#content h5 {
+  @extend .pstyle-h5;
+}
 
 p.menu_g_selecionado {
   @extend .pstyle-menu-big-selected;
 }
 
-/* Fix to 960px effective content */
-#wrap-1 {
-  position: relative;
-}
+/* end */
 
+/* Fix to 960px effective content */
 #wrap-1,
 #footer-content,
 #theme-footer {
   width: 1040px;
-  border-left: 24px solid transparent;
-  border-right: 24px solid transparent;
+  border-left: $margin solid transparent;
+  border-right: $margin solid transparent;
 }
 
 #wrap-1 {
-  background: transparent url(images/content-bg.png) center top repeat-y;
+  position: relative;
+  margin: auto;
 }
 
 #wrap-2 {
-  padding: 24px;
+  padding: $margin;
   padding-top: 0;
   background: transparent;
   border-color: transparent;
@@ -374,25 +391,6 @@ body {
   }
 }
 
-#content h2 {
-  @extend .pstyle-h2;
-  text-transform: uppercase;
-  color: $c-exchange;
-  margin-left:25px;
-}
-#content h3 {
-  @extend .pstyle-h3;
-}
-#content h4 {
-  @extend .pstyle-h4;
-  text-transform: uppercase;
-  color: $c-exchange;
-  margin-left:25px;
-}
-#content h5 {
-  @extend .pstyle-h5;
-}
-
 
 #header-links { 
   float: left;
@@ -434,7 +432,7 @@ body {
 
 #active-organization {
   background: #7857B8;
-  height: 24px;
+  height: $margin;
   width: 100%;
   position: absolute;
   left: 0;
