Fix header link

--- a/header.html.erb
+++ b/header.html.erb
@@ -6,8 +6,8 @@
   <div id='header-links'>
     <%= link_to _('home'), '/' %>
     <%= link_to _('culture points'), :controller => :search, :action => :enterprises %>
-    <%= link_to _('offers, interests and knowledges'), :controller => :search, :action => :enterprises %>
-    <%= link_to _('how it works'), :controller => :search, :action => :enterprises %>
+    <%= link_to _('offers, interests and knowledges'), :controller => :search, :action => :index %>
+    <%= link_to _('how it works'), '#' %>
   </div>
 
   <div id="user">
